force-app/main/default/objects/Charket_Scoring_Event__e/Charket_Scoring_Event__e.object-meta.xml
<CustomObject>
    <label>Charket Scoring Event</label>
    <pluralLabel>Charket Scoring Events</pluralLabel>
</CustomObject>