force-app/main/default/objects/Charket_Scoring_Event__e/fields/CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberId__c</fullName>
    <description>Salesforce campaign member ID for Charket</description>
    <label>CampaignMemberId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>