force-app/main/default/objects/Charket_Scoring_Event__e/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>Salesforce contact ID for Charket</description>
    <label>ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>