force-app/main/default/objects/Charket_Scoring_Event__e/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <description>Salesforce lead ID for Charket</description>
    <label>LeadId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>